trying to fix some issues with aspect ratio on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -109,7 +109,7 @@ h1 {
     @include media-query($on-palm) {// this is only included when the width is too small to accomodate "on-palm"
         position: absolute;
         top: 9px;
-        right: 0px;
+        right: 10px;
         background-color: $background-color;
         border: 2px solid $grey-color-dark;
         border-radius: 5px;
@@ -145,7 +145,7 @@ h1 {
         }
         &:hover{
             float: right;
-            width: 20%;
+            width: 150px;
             height: 300px;
             ul {
                 display: block;
@@ -472,8 +472,8 @@ h1 {
 .slideshow {
     position: relative;
 	width: 100%; /* Adjust the width as needed */
-    max-width: 100%;
     height: 50vh; /* Adjust the height as needed */
+    max-height: $content-width; /* prevents aspect ratio problems */
     overflow: hidden;
     background-color: #ffffff00;
 }
@@ -481,7 +481,8 @@ h1 {
 .slideshow img {
     position: absolute;
     top: 0;
-    height: 50vh;
+    height: 100%;
+    width: auto;
     opacity: 0;
     transition: transform 2s ease-in-out, opacity 2s ease-in-out;
     background-color: #ffffff00;
